@@ -256,3 +256,19 @@ __WebCreateFragment
 __WebHTMLViewPrintingMaximumShrinkFactor
 __WebHTMLViewPrintingMinimumShrinkFactor
 __WebViewDidStartAcceleratedCompositingNotification
+_OBJC_IVAR_$_WebDatabaseQuotaManager._origin
+_OBJC_IVAR_$_WebDeviceOrientation.m_internal
+_OBJC_IVAR_$_WebDeviceOrientationProviderMock.m_internal
+_OBJC_IVAR_$_WebGeolocationPosition._internal
+_OBJC_IVAR_$_WebHTMLRepresentation._private
+_OBJC_IVAR_$_WebInspector._frontend
+_OBJC_IVAR_$_WebInspector._inspectedWebView
+_OBJC_IVAR_$_WebNotification._private
+_OBJC_IVAR_$_WebPluginDatabase.plugInPaths
+_OBJC_IVAR_$_WebPluginDatabase.pluginInstanceViews
+_OBJC_IVAR_$_WebPluginDatabase.plugins
+_OBJC_IVAR_$_WebPluginDatabase.registeredMIMETypes
+_OBJC_IVAR_$_WebSecurityOrigin._applicationCacheQuotaManager
+_OBJC_IVAR_$_WebSecurityOrigin._databaseQuotaManager
+_OBJC_IVAR_$_WebSecurityOrigin._private
+_OBJC_IVAR_$_WebUserContentURLPattern._private
