@@ -1,5 +1,15 @@
 2017-02-22  Aakash Jain  <aakash_jain@apple.com>
 
+        Export Objective-C symbols for variables in Webkit SPI
+        https://bugs.webkit.org/show_bug.cgi?id=168758
+
+        Reviewed by Alexey Proskuryakov.
+
+        * Configurations/WebKitLegacy.xcconfig: using separate .exp file for i386.
+        * WebKit.exp: Added various Objective-C symbols.
+
+2017-02-22  Aakash Jain  <aakash_jain@apple.com>
+
         Move instance members from WKQuadObject to implementation file
         https://bugs.webkit.org/show_bug.cgi?id=168740
 
