@@ -1,3 +1,12 @@
+2017-02-22  Aakash Jain  <aakash_jain@apple.com>
+
+        Export Objective-C symbols for variables in Webkit SPI
+        https://bugs.webkit.org/show_bug.cgi?id=168758
+
+        Reviewed by Alexey Proskuryakov.
+
+        * WebKit.xcodeproj/project.pbxproj: Generating separate .exp file for i386 without _OBJC_IVAR symbols.
+
 2017-02-21  Aakash Jain  <aakash_jain@apple.com>
 
         Make WebKitStatisticsPrivate.h project header
